--- a/css/style.css
+++ b/css/style.css
@@ -328,8 +328,8 @@
     }
 
     #card-2 .face-front {rbavn
-      background: linear-gradient(to left, #ffffff, #d32f2f);  /* Standard syntax */
-      color: white;
+      background: #512da8;
+      color: black;
     }
 
     #card-2 .face-back {
