--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@
       color: black;
     }
     #card-1 .face-back {
-      background: #1565c0;
+      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
@@ -331,7 +331,7 @@
     }
 
     #card-2 .face-back {
-      background: #512da8;
+      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
@@ -375,7 +375,7 @@
     }
 
     #card-3 .face-back {
-      background: #00838f;
+      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
@@ -419,7 +419,7 @@
     }
 
     #card-4 .face-back {
-      background: #212121;
+      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
@@ -463,7 +463,7 @@
     }
 
     #card-5 .face-back {
-      background: #d32f2f;
+      background: linear-gradient(to bottom right, rgba(0, 150, 136, 0.3) , rgba(0, 188, 212, 0.7));
       color: white;
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
