--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,9 @@
       -webkit-transform-style: preserve-3d;
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
@@ -278,9 +281,10 @@
       -moz-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 2;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
     #card-1 .face-front {
       background: white;
@@ -292,7 +296,7 @@
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
 
@@ -308,6 +312,9 @@
       -webkit-transform-style: preserve-3d;
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
@@ -320,9 +327,10 @@
       -moz-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 2;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
     #card-2 .face-front {
@@ -336,7 +344,7 @@
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
 
@@ -352,6 +360,9 @@
       -webkit-transform-style: preserve-3d;
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
@@ -364,9 +375,10 @@
       -moz-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 2;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
     #card-3 .face-front {
@@ -380,7 +392,7 @@
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
 
@@ -396,6 +408,9 @@
       -webkit-transform-style: preserve-3d;
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
@@ -408,9 +423,10 @@
       -moz-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 2;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
     #card-4 .face-front {
@@ -424,7 +440,7 @@
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
 
@@ -440,6 +456,9 @@
       -webkit-transform-style: preserve-3d;
       -moz-transform-style: preserve-3d;
       transform-style: preserve-3d;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
@@ -452,9 +471,10 @@
       -moz-backface-visibility: hidden;
       backface-visibility: hidden;
       z-index: 2;
+      -o-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
       -webkit-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      -moz-box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      box-shadow: box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      -moz-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     }
 
     #card-5 .face-front {
@@ -468,7 +488,7 @@
       border: 1px solid grey;
       -o-transform: rotateY(180deg);
       -webkit-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
       transform: rotateY(180deg);
     }
 
