--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@
       height: 50px;
       padding: 7px 10px;
       border-radius: 50px;
+      font-size: 10px;
       text-align: center;
     }
 
