--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
     }
     /*Navbar style*/
 
-    /*Main*/
+    /*Main Background*/
     .main-design {
 
       width: 100%;
@@ -123,7 +123,7 @@
       margin-right: auto;
       margin-left: auto;
     }
-    /*Main*/
+    /*Main Background*/
 
     /*Buttons*/
     .btn-outline-soufun {
