--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ main.design .device-container {
   transform: rotateY(-180deg);
 }
 
-#card-1 {
+#card-1, #card-2, #card-3, #card-4, #card-5 {
   width: 100%;
   height: 100%;
   text-align: center;
@@ -302,198 +302,10 @@ main.design .device-container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-#card-1 .face-front, #card-1 .face-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-1 .face-front {
-  background: white;
-  color: black;
-}
-
-#card-1 .face-back {
-  background: linear-gradient(to bottom right, #1976d2, rgba(0, 188, 212, 0.7));
-  color: white;
-  border: 1px solid grey;
-  -o-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-
-#card-2 {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  -o-transition: all 0.8s ease-in-out;
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-2 .face-front, #card-2 .face-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-2 .face-front {
-  background: white;
-  color: black;
-}
-
-#card-2 .face-back {
-  background: linear-gradient(to bottom right, #1976d2, rgba(0, 188, 212, 0.7));
-  color: white;
-  border: 1px solid grey;
-  -o-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-
-#card-3 {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  -o-transition: all 0.8s ease-in-out;
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-3 .face-front, #card-3 .face-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-3 .face-front {
-  background: white;
-  color: black;
-}
-
-#card-3 .face-back {
-  background: linear-gradient(to bottom right, #1976d2, rgba(0, 188, 212, 0.7));
-  color: white;
-  border: 1px solid grey;
-  -o-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-
-#card-4 {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  -o-transition: all 0.8s ease-in-out;
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-4 .face-front, #card-4 .face-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-#card-4 .face-front {
-  background: white;
-  color: black;
-}
-
-#card-4 .face-back {
-  background: linear-gradient(to bottom right, #1976d2, rgba(0, 188, 212, 0.7));
-  color: white;
-  border: 1px solid grey;
-  -o-transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-
-#card-5 {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  -o-transition: all 0.8s ease-in-out;
-  -webkit-transition: all 0.8s ease-in-out;
-  -moz-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -o-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
+#card-1 .face-front, #card-1 .face-back,
+#card-2 .face-front, #card-2 .face-back,
+#card-3 .face-front, #card-3 .face-back,
+#card-4 .face-front, #card-4 .face-back,
 #card-5 .face-front, #card-5 .face-back {
   width: 100%;
   height: 100%;
@@ -509,11 +321,19 @@ main.design .device-container {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+#card-1 .face-front,
+#card-2 .face-front,
+#card-3 .face-front,
+#card-4 .face-front,
 #card-5 .face-front {
   background: white;
   color: black;
 }
 
+#card-1 .face-back,
+#card-2 .face-back,
+#card-3 .face-back,
+#card-4 .face-back,
 #card-5 .face-back {
   background: linear-gradient(to bottom right, #1976d2, rgba(0, 188, 212, 0.7));
   color: white;
